# uv-example

./: Dockerfile  Makefile  README.md  pyproject.toml
level_1/: __init__.py
level_1/level_2/: a.py
level_1/level_2a/: __init__.py
libs/localpackage/: main.py  pyproject.toml
